# oracle-catalyst

./: .gitignore
demo/: Makefile  launcher.sh  pyproject.toml  salt.sh  setup.cfg
demo/src/catalystdemo/: app.py
demo/src/catalystdemo/ux/: cli.py
demo/src/hologramdemo/ux/: cli.py
manager/helpers/: setup_tmp.sh  setup_vars_common.sh  setup_vars_external.sh  setup_vars_internal.sh
manager/machines/host/: deploy.sh  superuser.sh  user.sh
manager/machines/vm/: deploy.sh  post_deploy_run.sh  pre_deploy_deps.sh
patterns/cycle/superuser/: apt.sh  setup.sh
patterns/cycle/user/: run.sh  stage.sh
patterns/cycle/user/emitters/: emit_activate.sh
patterns/split/host/superuser/: setup.sh
patterns/split/host/user/stagers/: stage_venv_app.sh  stage_venv_env.sh
patterns/split/vm/superuser/: apt.sh
patterns/split/vm/user/: emit.sh  run.sh  stage.sh
patterns/split/vm/user/emitters/: emit_activate.sh
patterns/split/vm/user/runners/: run_build.sh
patterns/split/vm/user/stagers/: stage_venv.sh
shelf/vagrantfiles/: large  medium  small
